# datasheet-schema

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml  validate.yml
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/datasheet_schema/: __init__.py  importers.py  models.py  validation.py
bindings/python/tests/: conftest.py  test_all_examples.py  test_example.py  test_importer.py  test_invalid.py
bindings/typescript/: datasheet.d.ts  index.d.ts  index.js
dictionary/: analog_switch-1.0.json  bjt-1.0.json  capacitor-1.0.json  comparator-1.0.json  dc_dc-1.0.json  diode-1.0.json  family-dictionary-1.0.schema.json  inductor-1.0.json  jfet-1.0.json  ldo-1.0.json  mosfet-1.0.json  op_amp-1.0.json  resistor-1.0.json  voltage_reference-1.0.json
examples/: analog_switch-dg419.datasheet.json  bjt-2n3904.datasheet.json  bjt-bfr93a-rf.datasheet.json  bjt-tip120-darlington.datasheet.json  capacitor-nichicon-uhe.datasheet.json  comparator-tlv3501.datasheet.json  dcdc-lm5116-controller.datasheet.json  dcdc-lmr33630.datasheet.json  dcdc-lt3748-flyback.datasheet.json  diode-1n4007.datasheet.json  diode-1n5231b-zener.datasheet.json  diode-smaj12a-tvs.datasheet.json  inductor-wurth-lhmi.datasheet.json  jfet-2n5457.datasheet.json  ldo-ht7533.datasheet.json  ldo-lt3094-negative.datasheet.json  ldo-me6211c33m5g.datasheet.json  ldo-tlv70033.datasheet.json  ldo-xc6206p332mr.datasheet.json  mosfet-gan-epc2308.datasheet.json  mosfet-nchannel-30v.datasheet.json  opamp-ada4530-1.datasheet.json  opamp-opa1612.datasheet.json  resistor-crcw0805.datasheet.json  voltage_reference-adr4525.datasheet.json  voltage_reference-lm4040-10v.datasheet.json  voltage_reference-ref3025.datasheet.json
schema/: datasheet-1.0.schema.json
scripts/: gen-types.mjs  regression.mjs  validate.mjs
spec/v1.0/: corpus-summary.txt  datasheet-spec.md  parameter-frequency-analysis.txt
test/conformance/dictionary-invalid/: temperature-in-volts.json  voltage-in-degc.json
test/conformance/invalid/: bad-confidence-range.json  bad-guarantee-value.json  bad-limit-class.json  bad-polarity.json  bad-ppm-prefixed-unit.json  bad-unit.json  empty-value.json  lowercase-pin-function.json  (+3 more)
(+37 files in other folders)
