[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datasheet-schema"
version = "1.2.0"
description = "Pydantic v2 bindings for the Datasheet Schema, a machine-readable JSON Schema for electronic-component datasheet specifications where each value records its test conditions and provenance."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "nkorai" }]
keywords = [
    "datasheet",
    "json-schema",
    "electronics",
    "component",
    "eda",
    "hardware",
    "ldo",
    "semiconductor",
    "parametric",
    "spec",
    "provenance",
    "pydantic",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2", "jsonschema>=4"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/nkorai/datasheet-schema"
Repository = "https://github.com/nkorai/datasheet-schema"

[tool.setuptools]
packages = ["datasheet_schema"]

[tool.pytest.ini_options]
testpaths = ["tests"]
