[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datasheet-schema"
version = "2.0.0"
description = "Python data binding for the Datasheet Schema: imports the JSON Schema and family dictionaries for electronic-component datasheet specifications. Data only, no runtime logic."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nkorai" }]
keywords = [
    "datasheet",
    "json-schema",
    "electronics",
    "component",
    "eda",
    "hardware",
    "ldo",
    "semiconductor",
    "parametric",
    "spec",
    "provenance",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nkorai/datasheet-schema"
Repository = "https://github.com/nkorai/datasheet-schema"

[tool.setuptools]
packages = ["datasheet_schema"]
